[metadata]
name = EZ-TG-Moonraker
version = <version number: 0.1.0>
license = <license name, e.g. MIT>
description = <Easy and efficient bot for moonraker to use with telegram>
long_description = file: README.md
author = <Liad B. aka "3DHS">
author_email = <Optional: author e-mail>
classifiers=
   Development Status :: 4 - Beta
   License :: OSI Approved :: MIT License
   Natural Language :: English
   Programming Language :: Python :: 3 :: Only
   <...>
   <classifier m>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   opencv-python==4.5.5.64
   pyTelegramBotAPI==4.4.0
   requests

[options.packages.find]
where=src